--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,20 +27,20 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     //Support libraries
-    compile 'com.android.support:recyclerview-v7:27.1.1'
-    compile "com.android.support:design:27.1.1"
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation "com.android.support:design:27.1.1"
 
     //General
-    compile 'com.jakewharton.timber:timber:4.7.0'
+    implementation 'com.jakewharton.timber:timber:4.7.0'
 
     //Binding
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     //Model
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.okhttp3:okhttp:3.8.0'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.0'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
 
     //View
     implementation 'com.github.bumptech.glide:glide:4.6.1'
